# wireplumber.rs

./: .commitlintrc.json  .envrc  .gitignore  .gitmodules  .rustfmt.toml  COPYING  Cargo.toml  Gir.toml  README.adoc  build.rs  ci.nix  crates.js  flake.nix  help.html  lock.nix  search-index.js  settings.html  shell.nix  source-files.js  wireplumber  wireplumber_sys
.github/: README.md  commitlint.adoc
ci/: commitlint.nix  config.nix  gir.sh  test-wpexec.lua  test-wpexec.sh  wp-gir-filter.sh  wp-gir-sys.patch  wp-gir.patch
dev/: help.html  search-index.js  settings.html
examples/: Cargo.toml  README.adoc  build.rs  default.nix  script.lua
examples/.github/: README.md
examples/src/: static-link.rs
exec/: all.html  constant.LOG_DOMAIN.html  enum.ModuleType.html  fn.main.html  fn.main_async.html  index.html  sidebar-items.js  struct.Args.html
generate/: Gir.toml  build.rs  build_version.rs
glib_signal/: all.html  index.html  macro.def_signal.html  macro.impl_signal!.html  macro.impl_signal.html  sidebar-items.js  struct.BorrowedObject.html  struct.ConnectDetails.html  struct.ConnectEof.html  struct.OnceFuture.html  struct.Pointer.html  struct.PrimitiveValue.html  struct.SignalFlags.html  struct.SignalStream.html  trait.BuildSignal.html  trait.BuildableSignal.html  trait.DetailedSignal.html  trait.FromValues.html  trait.Notifies.html  trait.ObjectSignalExt.html  trait.Signal.html  trait.ToValueOption.html
main/: crates.js  help.html  search-index.js  settings.html  src-files.js
src/: README.adoc  README.md  core.rs  error.rs  impl_node.rs  interest.rs  iterator.rs  lib.rs  log.rs  node.rs  object.rs  object_manager.rs  plugin.rs  port.rs  prelude.rs  properties.rs  proxy.rs  pw.rs  si.rs  signals.rs  spa.rs  transition.rs
static_link_module/: all.html  constant.LOG_DOMAIN.html  fn.link_ports.html  fn.main_async.html  fn.main_loop.html  fn.true_.html  fn.wireplumber__module_init.html  index.html  sidebar-items.js  struct.PortMapping.html  struct.StaticLink.html  struct.StaticLinkArgs.html
sys/: Cargo.toml  README.adoc  tests
sys/.github/: README.md
sys/generate/: Gir.toml  build.rs  build_version.rs
sys/generate/src/: Gir-sys.version  Gir.version  Wp-0.4.gir  Wp-0.5.gir  lib.rs
sys/generate/tests/: abi.rs  constant.c  layout.c  manual.h
sys/src/: README.adoc  README.md  lib.rs
sys/tests/: abi.rs  constant.c  layout.c  manual.h
tests/: smoke.rs
wireplumber/: all.html  enum.ConstraintType.html  enum.ConstraintVerb.html  enum.Direction.html  enum.LibraryErrorEnum.html  enum.NodeState.html  enum.TransitionStep.html  index.html  macro.critical.html  macro.debug.html  macro.info.html  macro.log.html  macro.message.html  macro.newtype_wrapper!.html  macro.newtype_wrapper.html  macro.plugin_export.html  macro.simple_plugin_subclass!.html  macro.simple_plugin_subclass.html  macro.trace.html  macro.warning.html  sidebar-items.js  struct.Client.html  struct.ComponentLoader.html  struct.Constraint.html  struct.Core.html  struct.DebugValue.html  struct.Device.html  struct.Endpoint.html  struct.Error.html  struct.Factory.html  struct.FeatureActivationTransition.html  struct.FromAnyVariantWrapVariant.html  struct.GlobalProxy.html  struct.ImplEndpoint.html  struct.ImplMetadata.html  struct.ImplModule.html  struct.ImplNode.html  struct.InitFlags.html  struct.Interest.html  struct.InterestMatch.html  (+62 more)
wireplumber_sys/: all.html  constant.WP_CONSTRAINT_TYPE_G_PROPERTY.html  constant.WP_CONSTRAINT_TYPE_NONE.html  constant.WP_CONSTRAINT_TYPE_PW_GLOBAL_PROPERTY.html  constant.WP_CONSTRAINT_TYPE_PW_PROPERTY.html  constant.WP_CONSTRAINT_VERB_EQUALS.html  constant.WP_CONSTRAINT_VERB_IN_LIST.html  constant.WP_CONSTRAINT_VERB_IN_RANGE.html  constant.WP_CONSTRAINT_VERB_IS_ABSENT.html  constant.WP_CONSTRAINT_VERB_IS_PRESENT.html  constant.WP_CONSTRAINT_VERB_MATCHES.html  constant.WP_CONSTRAINT_VERB_NOT_EQUALS.html  constant.WP_DBUS_FEATURE_ENABLED.html  constant.WP_DBUS_STATE_CLOSED.html  constant.WP_DBUS_STATE_CONNECTED.html  constant.WP_DBUS_STATE_CONNECTING.html  constant.WP_DIRECTION_INPUT.html  constant.WP_DIRECTION_OUTPUT.html  constant.WP_INIT_ALL.html  constant.WP_INIT_PIPEWIRE.html  constant.WP_INIT_SET_GLIB_LOG.html  constant.WP_INIT_SET_PW_LOG.html  constant.WP_INIT_SPA_TYPES.html  constant.WP_INTEREST_MATCH_ALL.html  constant.WP_INTEREST_MATCH_FLAGS_CHECK_ALL.html  constant.WP_INTEREST_MATCH_FLAGS_NONE.html  constant.WP_INTEREST_MATCH_GTYPE.html  constant.WP_INTEREST_MATCH_G_PROPERTIES.html  constant.WP_INTEREST_MATCH_NONE.html  constant.WP_INTEREST_MATCH_PW_GLOBAL_PROPERTIES.html  constant.WP_INTEREST_MATCH_PW_PROPERTIES.html  constant.WP_ITERATOR_METHODS_VERSION.html  constant.WP_LIBRARY_ERROR_INVALID_ARGUMENT.html  constant.WP_LIBRARY_ERROR_INVARIANT.html  constant.WP_LIBRARY_ERROR_OPERATION_FAILED.html  constant.WP_LINK_FEATURE_ESTABLISHED.html  constant.WP_LINK_STATE_ACTIVE.html  constant.WP_LINK_STATE_ALLOCATING.html  constant.WP_LINK_STATE_ERROR.html  constant.WP_LINK_STATE_INIT.html  (+647 more)
wp_sys/: all.html  constant.WP_CONSTRAINT_TYPE_G_PROPERTY.html  constant.WP_CONSTRAINT_TYPE_NONE.html  constant.WP_CONSTRAINT_TYPE_PW_GLOBAL_PROPERTY.html  constant.WP_CONSTRAINT_TYPE_PW_PROPERTY.html  constant.WP_CONSTRAINT_VERB_EQUALS.html  constant.WP_CONSTRAINT_VERB_IN_LIST.html  constant.WP_CONSTRAINT_VERB_IN_RANGE.html  constant.WP_CONSTRAINT_VERB_IS_ABSENT.html  constant.WP_CONSTRAINT_VERB_IS_PRESENT.html  constant.WP_CONSTRAINT_VERB_MATCHES.html  constant.WP_CONSTRAINT_VERB_NOT_EQUALS.html  constant.WP_DIRECTION_INPUT.html  constant.WP_DIRECTION_OUTPUT.html  constant.WP_INIT_ALL.html  constant.WP_INIT_PIPEWIRE.html  constant.WP_INIT_SET_GLIB_LOG.html  constant.WP_INIT_SET_PW_LOG.html  constant.WP_INIT_SPA_TYPES.html  constant.WP_INTEREST_MATCH_ALL.html  constant.WP_INTEREST_MATCH_FLAGS_CHECK_ALL.html  constant.WP_INTEREST_MATCH_FLAGS_NONE.html  constant.WP_INTEREST_MATCH_GTYPE.html  constant.WP_INTEREST_MATCH_G_PROPERTIES.html  constant.WP_INTEREST_MATCH_NONE.html  constant.WP_INTEREST_MATCH_PW_GLOBAL_PROPERTIES.html  constant.WP_INTEREST_MATCH_PW_PROPERTIES.html  (+555 more)
(+5463 files in other folders)
