[package]
name = "wireplumber"
version = "0.1.0"
authors = ["arcnmx"]
build = "build.rs"
edition = "2018"
resolver = "2"

description = "WirePlumber bindings"
keywords = ["pipewire", "wireplumber", "gobject"]

documentation = "http://arcnmx.github.io/wireplumber.rs/wireplumber/"
repository = "https://github.com/arcnmx/wireplumber.rs"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["dox", "v0_4_6", "experimental", "enable-libspa", "enable-futures"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"
glib = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core" }
gio = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core" }
pipewire-sys = { version = "0.4" }
libspa-sys = { version = "0.4" }
pipewire = { version = "0.4", optional = true }
libspa = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
ffi = { version = "0.1.0", path = "sys", package = "wireplumber-sys" }
bitflags = "1.3"
glib-signal = { version = "0.1.0", git = "https://github.com/arcnmx/glib-signal.rs.git" }

[build-dependencies]
pkg-config = "0.3"
semver = "1.0"

[features]
default = []
experimental = []
enable-futures = ["futures-util", "glib-signal/enable-futures"]
enable-libspa = ["libspa"]
v0_4_2 = ["ffi/v0_4_2"]
v0_4_3 = ["ffi/v0_4_3", "v0_4_2"]
v0_4_6 = ["ffi/v0_4_6", "v0_4_3"]
v0_4_8 = ["ffi/v0_4_8", "v0_4_6"]
dox = ["ffi/dox", "glib-signal/dox"]

[workspace]
members = ["sys", "examples"]
