[package]
name = "wireplumber"
version = "0.1.0"
authors = ["arcnmx"]
build = "build.rs"
edition = "2018"
resolver = "2"

description = "WirePlumber bindings"
keywords = ["pipewire", "wireplumber", "gobject"]

documentation = "http://arcnmx.github.io/wireplumber.rs/wireplumber/"
repository = "https://github.com/arcnmx/wireplumber.rs"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["dox", "v0_4_12", "experimental", "enable-libspa", "enable-futures", "enable-serde"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"
glib = { version = "0.16" }
gio = { version = "0.16" }
pipewire-sys = { version = "0.5" }
libspa-sys = { version = "0.5" }
libspa = { version = "0.5", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
ffi = { version = "0.1.0", path = "sys", package = "wireplumber-sys" }
bitflags = "1.3"
glib-signal = { version = "0.1.0", git = "https://github.com/arcnmx/glib-signal.rs.git" }

[dev-dependencies]
futures-util = { version = "0.3" }

[build-dependencies]
pkg-config = "0.3"
semver = "1.0"

[features]
default = []
experimental = []
enable-futures = ["glib-signal/enable-futures"]
enable-libspa = ["libspa"]
enable-serde = ["serde"]
v0_4_2 = ["ffi/v0_4_2"]
v0_4_3 = ["ffi/v0_4_3", "v0_4_2"]
v0_4_5 = ["ffi/v0_4_5", "v0_4_3"]
v0_4_6 = ["ffi/v0_4_6", "v0_4_5"]
v0_4_8 = ["ffi/v0_4_8", "v0_4_6"]
v0_4_10 = ["ffi/v0_4_10", "v0_4_8"]
v0_4_11 = ["ffi/v0_4_11", "v0_4_10"]
v0_4_12 = ["ffi/v0_4_12", "v0_4_11"]
dox = ["ffi/dox", "glib-signal/dox"]

[workspace]
members = ["sys", "examples"]
