[package]
name = "wireplumber"
version = "0.1.0" # keep in sync with documentation and html_root_url
authors = ["arcnmx"]
build = "build.rs"
edition = "2021"
rust-version = "1.60"

description = "WirePlumber bindings"
keywords = ["pipewire", "wireplumber", "gobject"]
categories = ["multimedia::audio", "api-bindings"]

documentation = "https://arcnmx.github.io/wireplumber.rs/v0.1.0/wireplumber/"
repository = "https://github.com/arcnmx/wireplumber.rs"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/build.rs",
	"/README*",
	"/COPYING*",
]

[package.metadata]
branches = ["main", "dev"]

[package.metadata.docs.rs]
features = ["dox", "v0_4_12", "experimental", "glib-signal", "libspa", "futures", "serde"]

[badges]
maintenance = { status = "actively-maintained" }

[dependencies]
libc = "0.2"
glib = { version = "0.17" }
gio = { version = "0.17" }
pipewire-sys = { version = "0.5" }
libspa-sys = { version = "0.5" }
libspa = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true }
ffi = { version = "0.1.0", path = "sys", package = "wireplumber-sys" }
bitflags = "1.3"
futures-channel = { version = "0.3", optional = true }
glib-signal = { version = "0.2", optional = true }

[dev-dependencies]
futures-util = { version = "0.3" }

[build-dependencies]
pkg-config = "0.3"
semver = "1.0"

[features]
default = []
experimental = []
glib-signal = ["dep:glib-signal"]
futures = ["glib-signal?/futures", "dep:futures-channel"]
libspa = ["dep:libspa"]
serde = ["dep:serde"]
v0_4_2 = ["ffi/v0_4_2"]
v0_4_3 = ["ffi/v0_4_3", "v0_4_2"]
v0_4_5 = ["ffi/v0_4_5", "v0_4_3"]
v0_4_6 = ["ffi/v0_4_6", "v0_4_5"]
v0_4_8 = ["ffi/v0_4_8", "v0_4_6"]
v0_4_10 = ["ffi/v0_4_10", "v0_4_8"]
v0_4_11 = ["ffi/v0_4_11", "v0_4_10"]
v0_4_12 = ["ffi/v0_4_12", "v0_4_11"]
dox = ["ffi/dox", "glib-signal?/dox"]

[workspace]
members = ["sys", "examples"]
