[package]
name = "wireplumber-sys"
version = "0.1.0" # keep in sync with html_root_url
edition = "2021"
build = "./generate/build.rs"

description = "WirePlumber FFI bindings"
keywords = ["pipewire"]
categories = ["external-ffi-bindings"]

documentation = "https://arcnmx.github.io/wireplumber.rs/v0.1.0/wireplumber_sys/"
homepage = "https://arcnmx.github.io/wireplumber.rs/"
repository = "https://github.com/arcnmx/wireplumber.rs/tree/main/sys"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/generate/build.rs",
	"/generate/src/lib.rs",
	"/build.rs",
	"/README*",
]

[package.metadata.system-deps.wireplumber_0_4]
name = "wireplumber-0.4"
version = "0.4"

[package.metadata.system-deps.wireplumber_0_4.v0_4_2]
version = "0.4.2"

[package.metadata.system-deps.wireplumber_0_4.v0_4_3]
version = "0.4.3"

[package.metadata.system-deps.wireplumber_0_4.v0_4_5]
version = "0.4.5"

[package.metadata.system-deps.wireplumber_0_4.v0_4_6]
version = "0.4.6"

[package.metadata.system-deps.wireplumber_0_4.v0_4_8]
version = "0.4.8"

[package.metadata.system-deps.wireplumber_0_4.v0_4_10]
version = "0.4.10"

[package.metadata.system-deps.wireplumber_0_4.v0_4_11]
version = "0.4.11"

[package.metadata.system-deps.wireplumber_0_4.v0_4_12]
version = "0.4.12"

[package.metadata.docs.rs]
features = ["dox", "v0_4_12"]

[dependencies]
libc = "0.2"
glib-sys = { version = "0.17" }
gobject-sys = { version = "0.17" }
gio-sys = { version = "0.17" }
pipewire = { version = "0.5", package = "pipewire-sys" }
libspa = { version = "0.5", package = "libspa-sys" }

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4_2 = []
v0_4_3 = ["v0_4_2"]
v0_4_5 = ["v0_4_3"]
v0_4_6 = ["v0_4_5"]
v0_4_8 = ["v0_4_6"]
v0_4_10 = ["v0_4_8"]
v0_4_11 = ["v0_4_10"]
v0_4_12 = ["v0_4_11"]
dox = []
