[package]
name = "wireplumber-sys"
version = "0.2.0" # keep in sync with html_root_url
edition = "2021"
build = "./generate/build.rs"

description = "WirePlumber FFI bindings"
keywords = ["pipewire"]
categories = ["external-ffi-bindings"]

documentation = "https://arcnmx.github.io/wireplumber.rs/v0.2.0/wireplumber_sys/"
homepage = "https://arcnmx.github.io/wireplumber.rs/"
repository = "https://github.com/arcnmx/wireplumber.rs/tree/main/sys"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/generate/build.rs",
	"/generate/build_version.rs",
	"/generate/src/lib.rs",
	"/build.rs",
]

[package.metadata.system-deps.wireplumber_0_5]
name = "wireplumber-0.5"
version = "0.5"

[package.metadata.docs.rs]
features = ["v0_5"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"
glib-sys = { version = "0.19" }
gobject-sys = { version = "0.19" }
gio-sys = { version = "0.19" }
pipewire = { version = "0.8", package = "pipewire-sys" }
libspa = { version = "0.8", package = "libspa-sys" }

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
default = ["v0_5"]
v0_5 = []
